<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="343dp"
        android:layout_height="128dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/flixnet_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- campo EMAIL -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        ​

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress" />
        ​
    </com.google.android.material.textfield.TextInputLayout>

    <!-- campo Nombre -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text" />
        ​
        ​</com.google.android.material.textfield.TextInputLayout>


    <!-- campo apellidos -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/apellidosLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_apellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/apellidos"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="text" />
        ​
        ​</com.google.android.material.textfield.TextInputLayout>


    <!-- campo PASSWORD -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passWordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidosLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        ​
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passWord"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />
        ​
    </com.google.android.material.textfield.TextInputLayout>

    <!-- campo confirmar password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confiPassWordLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_confiPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passWordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        ​
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confiPassWord"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword" />
        ​
    </com.google.android.material.textfield.TextInputLayout>

    <!--desplegable spinner-->

    <!--Boton ok-->


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:entries="@array/arr_paises"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confiPassWordLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOkRegister"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/label_OkRegister"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        />

    <!--bOTON CANCELAR-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/label_cancelar"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOkRegister"
        />




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>